<resources>
    <string name="app_name">Y的DEMO</string>
    <string name="login">登录</string>
    <string name="refresh">Refresh</string>
    <string name="user_name">User name</string>
    <string name="password">Password</string>
    <string name="register">注册</string>
    <string name="loading">加载中……</string>
    <string name="search">查詢</string>
    <string name="writeNumber">输入单号</string>
    <string name="defaultNumber">450920803566</string>
    <string name="joke">笑话</string>
    <string name="list">列表</string>
    <string name="add_content">这是第 %d 条数据 </string>
    <string name="startService">开启服务</string>
    <string name="stopService">结束服务</string>
    <string name="check_to_pass">接受本协议</string>
    <string name="error_message">请先同意本条款</string>
    <string name="lorem_ipsum">自定义页面\n同意说明书\n就是本产品的一系列使用说明条款</string>
</resources>
