<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/writeNumber"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:textSize="16sp"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">
        <com.yfl.library.widget.ClearEditText
            android:id="@+id/cdt_express_number"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:text="@string/defaultNumber"
            android:inputType="text"
            android:background="@drawable/shape_group_icon_bg"/>
        <Spinner
            android:id="@+id/Sp_express_type"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:entries="@array/expressType">
        </Spinner>
    </LinearLayout>
    <Button
        android:id="@+id/btn_express_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@color/green_8c"
        android:text="@string/search"
        android:textColor="@color/white"
        />
    <android.support.v4.view.ViewPager
        android:id="@+id/vp_express"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />
    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="#888" />
    <include
        layout="@layout/alpha_tab_express"/>
</LinearLayout>