<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_username"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginTop="150dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:background="#fff" >

            <ImageView
                android:id="@+id/iv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:contentDescription="@null"
                android:src="@drawable/em_icon_account" />

            <EditText
                android:id="@+id/edt_login_username"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/user_name"
                android:paddingLeft="10dip"
                android:maxLines="1"
                android:textColor="#000"
                android:textSize="18sp" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_password"
            android:layout_width="match_parent"
            android:layout_height="54dp"
            android:layout_marginLeft="28dp"
            android:layout_marginRight="28dp"
            android:layout_marginTop="10dp"
            android:background="#fff" >

            <ImageView
                android:id="@+id/iv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="10dip"
                android:contentDescription="@null"
                android:src="@drawable/em_icon_pwd" />

            <EditText
                android:id="@+id/edt_login_password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerVertical="true"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingLeft="10dip"
                android:maxLines="1"
                android:textSize="18sp"
                android:imeOptions="actionDone"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_marginTop="30dp"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/bt_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="@drawable/em_button_register_bg"
                android:gravity="center"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:text="@string/register"
                android:textColor="@android:color/black"
                android:textSize="18sp" />

            <Button
                android:id="@+id/bt_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_weight="1"
                android:background="@drawable/em_button_login_bg"
                android:gravity="center"
                android:paddingBottom="7dp"
                android:paddingTop="7dp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
</LinearLayout>